Fixed openapi dataplane.yaml
